--- a/style.css
+++ b/style.css
@@ -1,17 +1,29 @@
 body{
-    background-color: white;
-    margin:0;
+    background-color: grey;
+    color: black;
+    margin: 0;
+    font-family: "PressStart", 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
+
+.body2{
+    text-align: center;
+    margin-top: 16px;
+}
+.ohno{
+    display: flex;
+    flex-direction: column;
+}
+
 .heading{
     display: flex;
-    background-color: gray;
+    flex-direction: row;
+    background-color: rgb(59, 59, 59);
     justify-content: space-between;
     align-items: center;
     box-sizing: border-box;
     padding: 10px;
     gap: 20px;
-    width: 100%; 
-    position: fixed;
+    width: 100%;
 }
 
 .socials{
@@ -27,13 +39,31 @@ body{
     font-size: 16px;
     margin: 0px;
 }
+.name{
+    font-size: 12px;
+    color: white;
+}
+.page{
+    font-family: "PressStart", 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-size: 12px;
+    background-color: rgb(59, 59, 59);
+    color: white;
+    margin: 0px;
+    padding: 10px 10px;
+    border: none;
+}
+
+@font-face {
+    font-family: "PressStart";
+    src: url("./PressStart2P-Regular.ttf") format("truetype");
+}
 
 button:hover{
     background-color: #6c6c6c; 
     margin: 0px;
 }
 
-@media (max-width: 600px) {
+@media (max-width: 775px) {
 
     .navigation {
         display: none;
